--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-native-tab-page-view",
-  "version": "0.1.0",
+  "name": "@onekeyfe/react-native-tab-page-view",
+  "version": "1.0.0",
   "description": "React Native Tab Page View",
-  "main": "src/index",
-  "module": "src/index",
-  "types": "src/index",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
+  "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
@@ -31,8 +31,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "prepare": "bob build",
-    "release": "release-it"
+    "prepare": "bob build"
   },
   "keywords": [
     "react-native",
