--- a/example/package.json
+++ b/example/package.json
@@ -22,7 +22,8 @@
     "metro-react-native-babel-preset": "0.76.8",
     "pod-install": "^0.1.0"
   },
+  "packageManager": "yarn@3.6.1",
   "engines": {
-    "node": ">=16"
-  }
+    "node": ">= 18.0.0"
+  },
 }
